@@ -111,10 +111,17 @@ sub zilla {
 
     my $core_debug = grep { m/\A[-_]\z/ } @v_plugins;
 
-    my $zilla = Dist::Zilla::Dist::Builder->from_config({
-      chrome => $self->chrome,
-      _global_stashes => $self->_build_global_stashes,
-    });
+    my $zilla;
+    try {
+      $zilla = Dist::Zilla::Dist::Builder->from_config({
+        chrome => $self->chrome,
+        _global_stashes => $self->_build_global_stashes,
+      });
+    } catch {
+      die $_ unless try { $_->isa('Config::MVP::Error') }
+                 && $_->ident =~ /no viable config/;
+      $self->chrome->logger->log_fatal("no configuration (e.g, dist.ini) found");
+    };
 
     $zilla->logger->set_debug($verbose ? 1 : 0);
 
